--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "bcrypt>=4.3.0",
+    "dotenv>=0.9.9",
     "email-validator>=2.2.0",
     "fastapi>=0.116.1",
+    "slowapi>=0.1.9",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
